<resources>
    <string name="app_name">DZ4</string>
    <string name="option_one">Об авторизации на устройстве</string>
    <string name="option_two">О новинках и предложениях</string>
    <string name="option_three">Получать уведомления</string>
    <string name="gender_text">Пол</string>
    <string name="scores_text">Баллы</string>
    <string name="scores_digit">35/100</string>
    <string name="button_text">Сохранить</string>
    <string name="male">М</string>
    <string name="female">Ж</string>
    <string name="text_name">Имя</string>
    <string name="text_phone">Телефон</string>
</resources>