<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/default_margin"
            android:src="@drawable/user_profile"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_name"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:hint="@string/text_name"
            app:boxStrokeColor="@color/violet"
            app:boxStrokeWidth="@dimen/boxStrokeWidth"
            app:counterEnabled="true"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/photo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_phone"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:hint="@string/text_phone"
            app:boxBackgroundColor="@color/violet"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/text_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/gender_text"
            android:textAppearance="@style/MyCustomText"
            app:layout_constraintTop_toBottomOf="@id/text_phone" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/gender">

            <RadioButton
                android:id="@+id/radioButtonOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAppearance="@style/MyCustomText"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/radioButtonTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAppearance="@style/MyCustomText"
                android:textSize="@dimen/text_size" />
        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:checked="true"
            android:text="@string/option_three"
            android:textAppearance="@style/MyCustomText"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox1"
            style="@style/CheckboxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:text="@string/option_one"
            app:buttonTint="@color/checkbox"
            app:checkedState="unchecked"
            app:layout_constraintTop_toBottomOf="@id/switch_material" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox2"
            style="@style/CheckboxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:text="@string/option_two"
            app:buttonTint="@color/checkbox"
            app:checkedState="unchecked"
            app:layout_constraintTop_toBottomOf="@id/checkbox1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/scores_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/scores_text"
            android:textAppearance="@style/MyCustomText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/scores_digit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/scores_digit"
            android:textAppearance="@style/MyCustomDigit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox2" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/scores_text"
            app:trackThickness="@dimen/track_thickness" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/text_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/button_text"
            app:layout_constraintTop_toBottomOf="@id/progress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>